# crypto-etl

./: .coveragerc  .flake8  .gitignore  .sqlfluffignore  README.md  pyproject.toml  requirements.txt
data/cleaned/: current_crypto_prices.csv  historical_crypto_prices.csv  historical_crypto_stats.csv
data/raw/: backup_current_prices.json  backup_historical_prices.json
docs/: PROJECT_DOCUMENTATION.md
scripts/: run_current_prices.py  run_etl.py  run_etl_pipeline.py  run_extract_historical_only.py  run_load_test.py  run_pipeline.py  run_streamlit.py  run_tests.py  run_transfrom_load_historical.py  test_extraction.py  update_backup_data.py
src/extract/: extract.py
src/extraction/: extract_current_prices.py  extract_historical_prices.py  fetch_crypto_prices.py
src/load/: load_current_prices.py  load_historical_prices.py
src/transform/: transform_current_prices.py  transform_historical_prices.py
src/utils/: config.py  logger.py  save_json.py  timer.py
streamlit_app/: 0_Market_Overview.py
streamlit_app/pages/: 1_Historical_Analysis.py  2_Comparison.py  3_Statistics.py  4_About.py
tests/: test_extract_current_prices.py  test_extract_historical_prices.py  test_load_current_prices.py  test_load_historical_prices.py  test_save_json.py  test_transform_current_prices.py  test_transfrom_historical_prices.py
