[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-etl"
version = "0.1.0"
description = "An ETL pipeline for extracting, transforming, and loading cryptocurrency price data"
authors = [
    { name = "Nasif Islam" }
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/Nasif-Islam/crypto-etl"

[project.scripts]
run_app = "scripts.run_app:main"
run_tests = "tests.run_tests:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
